add_library(network_verilated STATIC)
verilate(network_verilated VERILATOR_ARGS "-I../" "-I../axis/" SOURCES eth_crc.sv TRACE)
verilate(network_verilated VERILATOR_ARGS "-I../" "-I../axis/" SOURCES eth_framer.sv TRACE)
verilate(network_verilated VERILATOR_ARGS "-I../" "-I../axis/" SOURCES ip_header_gen.sv TRACE)
verilate(network_verilated VERILATOR_ARGS "-I../" "-I../axis/" SOURCES rmii_to_axis.sv TRACE)
verilate(network_verilated VERILATOR_ARGS "-I../" "-I../axis/" SOURCES udp_checksum.sv TRACE)
verilate(network_verilated VERILATOR_ARGS "-I../" "-I../axis/" SOURCES udp_header_gen.sv TRACE)
verilate(network_verilated VERILATOR_ARGS "-I../" "-I../axis/" SOURCES ip_deframer.sv TRACE)
verilate(network_verilated VERILATOR_ARGS "-I../" "-I../axis/" SOURCES tb/ip_deframer_harness.sv TRACE)

add_subdirectory(tb)